feat: 操作日志/直传闭环/反刷流/兑换码/邮箱验证码 + 安全加固与画布增强
后端:
- 操作日志: ai_generation_log 扩展 operation_type, 统一记录 AI生成/文件上传/删除/存素材,
  管理端按用户/任务ID筛选 + 批量关联回填用户名/画布名/状态 + 失败任务全额退积分(防重复)
- 文件直传闭环: OSS presign 直传, Redis 票据校验 key 归属/真实大小/MIME 白名单, 一次性消费
- 反刷流: @RateLimit 注解 + 拦截器 + 自动封禁 + 管理端安全面板
- 兑换码: 生成/兑换/管理后台
- 邮箱验证码注册(JavaMailSender, 未配置 SMTP 时 dev-log 兜底)
- AI 中转: 轮询/重试参数外置 yml, 任务恢复与超时自动退积分, 全能参考转视频
- 安全加固(CODEX): JWT access/refresh 分层; /download 防 SSRF + 超时/大小/重定向限制;
  文件详情归属校验(IDOR); 本地存储文件名 sanitize 防路径穿越

前端:
- 画布: 自动整理(分层网格+重心排序), 视频节点(hover播放/本地缓存/截首尾帧),
  360°全景(three.js + AI扩图), 九宫格切分, 提示词引用编辑
- 顶栏重构(悬浮控件) + 右上角账户(积分/订购/头像菜单/分享)
- 登录/注册/充值页深色重构
- 修复: Next16 proxyClientMaxBodySize 上传截断; typedRoutes 跨组动态路由 404